Servicio de lealtad mas generalizado y centralizado, correciones en servicios de clientes y reservaciones, logica de review aun falta validar